# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "apache-hamilton-ui"
version = "0.0.17"
description = "Apache Hamilton UI tracking server for dataflow visualization and monitoring."
requires-python = ">=3.10.1, <4"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE", "DISCLAIMER"]
keywords = ["hamilton", "ui", "tracking", "visualization"]
authors = [
    {name = "Stefan Krawczyk", email = "stefank@cs.stanford.edu"},
    {name = "Elijah ben Izzy", email = "elijah@dagworks.io"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "aiofiles",
    "aiohttp>=3.13.0",
    "click",
    "colorlog",
    "ddtrace>=2.21.0",
    "django>=4.2.0",
    "django-extensions",
    "django-ninja>=1.1.0",
    "loguru",
    "passlib",
    "psycopg2-binary",
    "pydantic>=2.0.0",
    "requests>=2.32.0",
    "apache-hamilton>=1.90.0",
    "typer",
]

[project.urls]
homepage = "https://www.tryhamilton.dev/"
documentation = "https://hamilton.apache.org/"
issues = "https://github.com/apache/hamilton/issues"
source = "https://github.com/apache/hamilton/ui/backend"

[tool.flit.module]
name = "hamilton_ui"

[tool.flit.sdist]
include = [
    "LICENSE",
    "NOTICE",
    "DISCLAIMER",
    "hamilton_ui/build/**",
    "tests/**",
]
exclude = [
    "hamilton_ui/tests/**",
    ".git/**",
    "**/__pycache__/**",
    "**/*.pyc",
]
